<resources>
    <string name="app_name">Views</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download File</string>
    <string name="alert">Show Alert Box</string>
    <string name="prompt">Show Prompt Dialog</string>
    <string name="yourMessage">Type your message</string>
    <string name="toast">Show Toast</string>
    <string name="change">Change Image</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="user">User : </string>
    <string name="submit">Submit : </string>
    <string name="col1">Column 1</string>
    <string name="col2">Column 2</string>
    <string name="col3">Column 3</string>
    <string name="col12">Column 1 and 2</string>

</resources>
