<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/linear_btn_1_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/linear_btn_2_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/linear_btn_3_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <Button
            android:id="@+id/linear_btn_1_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/linear_btn_2_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/linear_btn_3_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>